# HomeNodeServer

./: .gitignore  Cargo.toml  README.md
archive/rs-matterd/: .gitignore  README.md
archive/rs-matterd/overlay/rs-matterd/src/: main.rs  mdns.rs
archive/rs-matterd/packaging/debian/: rs-matterd.default
config/: server.example.toml
config/modules/: matter-bridge.example.toml  matter-controller.example.toml  network-discovery.example.toml  web.example.toml
crates/homenode-sdk/: Cargo.toml  build.rs
crates/homenode-sdk/proto/: homenode.proto
crates/homenode-sdk/src/: lib.rs
crates/homenode-server/: Cargo.toml
crates/homenode-server/src/: config.rs  lib.rs  main.rs  service.rs
crates/homenode-server/tests/: smoke.rs
docs/: architecture.md
modules/matter-bridge/: Cargo.toml
modules/matter-bridge/src/: main.rs
modules/matter-controller/: Cargo.toml
modules/matter-controller/src/: main.rs
modules/network-discovery/: Cargo.toml
modules/network-discovery/src/: main.rs
modules/web/: Cargo.toml
modules/web/src/: main.rs
rs-matter/: README.md
rs-matter/overlay/rs-matterd/: Cargo.toml
rs-matter/overlay/rs-matterd/src/: main.rs
rs-matter/packaging/debian/: control.in  postinst  postrm  rs-matterd.default  rs-matterd.service
rs-matter/scripts/rs-matter/: bootstrap-ubuntu.sh  clone-upstream.sh
rs-matterd/: README.md
rs-matterd/overlay/rs-matterd/: Cargo.toml
rs-matterd/overlay/rs-matterd/src/: main.rs  mdns.rs
rs-matterd/scripts/rs-matter/: bootstrap-ubuntu.sh  build-deb.sh
