[workspace]
members = [
    "crates/homenode-sdk",
    "crates/homenode-server",
    "modules/web",
    "modules/matter-controller",
    "modules/matter-bridge",
    "modules/network-discovery",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
hyper-util = "0.1"
prost = "0.13"
protoc-bin-vendored = "3"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
toml = "0.8"
tonic = { version = "0.12", features = ["transport"] }
tonic-build = "0.12"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
