[package]
name = "homenode-module-matter-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
homenode-sdk = { path = "../../crates/homenode-sdk" }
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tonic.workspace = true
tracing-subscriber.workspace = true
