[package]
name = "rs-matterd"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[workspace]

[dependencies]
async-io = "2"
embassy-futures = "0.1"
embassy-sync = "0.7"
env_logger = "0.11"
futures-lite = "2"
log = "0.4"
nix = { version = "0.27", features = ["net"] }
rand = { version = "0.8", features = ["std", "std_rng"] }
rs-matter = { path = "../../rs-matter", features = ["async-io"] }
socket2 = "0.5"
static_cell = "2"
